--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
+
 </head>
 <body>
-		<!-- Your code goes here-->
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/we3jKi9AAiU?si=kUEbWnI3lPdm0XzV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
+
+<h2 style="text-align:center;">Interactive Simulation Video</h2>
+<p style="text-align:center;">Watch the demonstration below to understand the simulation process.</p>
+
+<div class="iv-player_responsive_padding" style="margin:0 0 0 0;  padding:30% 0 0 0;position:relative;max-width:600px;margin:auto;" data-hash="6838a5a1e112a">
+    <div class="iv-player_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;">
+        <div class="iv-player_embed iv-player_async_p2z7746nud videoFoam=true" style="height:100%;position:relative;width:100%">
+            <div class="iv-player_swatch" style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;width:100%;">
+                <img 
+                    src="https://i-fast.b-cdn.net/live/18322_680b4fe07c3ac.png" 
+                    style="filter:blur(5px);height:100%;object-fit:contain;width:100%;" 
+                    alt="" aria-hidden="true" />
+            </div>
+        </div>
+    </div>
+</div>
+
+<p style="text-align:center;">After watching, proceed to the next step of the experiment.</p>
+<script type="text/javascript" src="https://videosuite-player-wrapper.vercel.app/assets" async></script>
+
 </body>
 </html>
