--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -22,7 +22,9 @@
 </div>
 
 <p style="text-align:center;">After watching, proceed to the next step of the experiment.</p>
+<p style="text-align:center; color:red;">NOTE: For this project, we are utilizing the VR application Gravity Sketch. Other applications may vary, offering different sets of options and tools for experimenting with lighting in virtual reality.</p>
 <script type="text/javascript" src="https://videosuite-player-wrapper.vercel.app/assets" async></script>
 
 </body>
+
 </html>
